fixed positioning on mobile nav

--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,10 @@ body {
     #footer {
       padding: 3em 0;
     }
+    
   }
 
-  @media only screen and (min-device-width: 480px){
+  @media screen and (max-width: 480px){
     .navbar-brand{
       display: none;
     }
